# simplelisp

./: Cargo.toml  dbg.sh  index.html  index.js  syntax.slsp
.cargo/: config.toml
src/: ast.rs  grammar.lalrpop  interpreter.rs  lib.rs  main.rs  object.rs  stdlib.rs
