[package]
name = "simplelisp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.12", features = ["derive"] }
lalrpop-util = { version="0.20.0", features=["lexer"] }
regex = "1.7.9"

[build-dependencies]
lalrpop = "0.20.0"

[profile.release]
lto = true
